[workspace]
members = [
    "maud_macros",
    "maud",
]
exclude = [
    "docs",
    "doctest",
]
resolver = "2"

[workspace.package]
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://maud.lambda.xyz/"
repository = "https://github.com/lambda-fairy/maud"
edition = "2021"
