[package]

name = "docs"
version = "0.0.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

license = "CC-BY-SA-4.0"
repository = "https://github.com/lambda-fairy/maud"
description = "Documentation for Maud."

edition = "2021"

[dependencies]
comrak = { version = "*", default-features = false, features = ["syntect"] }
maud = { path = "../maud" }
serde_json = "*"
syntect = "*"
