[package]
name = "doctest"
version = "0.1.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.0.0-rc.2", default-features = false, features = ["macros"] }
ammonia = "3"
maud = { path = "../maud", features = ["actix-web", "rocket", "tide", "axum"] }
pulldown-cmark = "0.8"
rocket = "0.5"
rouille = "3"
tide = "0.16"
tokio = { version = "1.9.0", features = ["rt", "macros", "rt-multi-thread"] }
axum = "0.7"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[lib]
path = "lib.rs"
