[package]
name = "doctest"
version = "0.1.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
edition = "2024"

[dependencies]
actix-web = { version = "4.0.0-rc.2", default-features = false, features = ["macros"] }
ammonia = "4"
maud = { path = "../maud", features = ["actix-web", "rocket", "tide", "axum", "warp", "submillisecond", "poem", "salvo"] }
pulldown-cmark = "0.13"
rocket = "0.5"
rouille = "3"
submillisecond = "0.4.1"
tide = "0.16"
tokio = { version = "1.9.0", features = ["rt", "macros", "rt-multi-thread"] }
axum = "0.8"
warp = "0.4"
poem = "3"
salvo = "0.78.0"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[lib]
path = "lib.rs"
