[package]

name = "iron-maud"
version = "0.1.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

license = "MIT/Apache-2.0"
documentation = "https://lambda.xyz/maud/iron_maud"
homepage = "http://lfairy.gitbooks.io/maud/content/"
repository = "https://github.com/lfairy/maud"
description = """
Maud integration for the Iron web framework.
"""

[dependencies]
iron = "0.4.0"

[dependencies.maud]
path = "../maud"
version = "0.10.0"
