[package]
name = "maud"
# When releasing a new version, please update html_root_url in src/lib.rs
version = "0.27.0"
documentation = "https://docs.rs/maud/"
description = "Compile-time HTML templates."
categories = ["template-engine"]
readme = "../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[features]
default = []

# Streaming documents
streaming = ["dep:futures", "dep:async-stream", "maud_macros/streaming"]

# Web framework integrations
actix-web = ["actix-web-dep", "futures-util"]
axum = ["axum-core", "http"]
salvo = ["salvo_core", "http"]

[dependencies]
maud_macros = { version = "0.27.0", path = "../maud_macros" }
itoa = "1"
rocket = { version = "0.5", optional = true }
futures-util = { version = "0.3.0", optional = true, default-features = false }
actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
tide = { version = "0.16.0", optional = true, default-features = false }
axum-core = { version = "0.5", optional = true }
submillisecond = { version = "0.4.1", optional = true }
http = { version = "1", optional = true }
warp = { version = "0.4", optional = true }
poem = { version = "3", optional = true }
salvo_core = { version = "0.78.0", optional = true }
futures = { version = "0.3.31", default-features = false, optional = true }
async-stream = { version = "0.3.6", default-features = false, optional = true }

[dev-dependencies]
trybuild = { version = "1.0.33", features = ["diff"] }

[package.metadata.docs.rs]
all-features = true
