[package]

name = "maud_extras"
version = "0.0.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

license = "CC0-1.0"
repository = "https://github.com/lfairy/maud"
description = "Extra bits and pieces for use in Maud templates."

[dependencies]
maud = { path = "../maud", features = ["iron"] }

[lib]
path = "lib.rs"
