[package]
name = "maud_macros"
# When releasing a new version, please update html_root_url in src/lib.rs
version = "0.26.0"
documentation = "https://docs.rs/maud_macros/"
description = "Internal crate. Please use 'maud' instead."

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[features]
hotreload = ["maud_macros_impl/hotreload"]

[dependencies]
maud_macros_impl = { path = "../maud_macros_impl" }
syn = "2"
quote = "1.0.7"
proc-macro2 = "1.0.23"
proc-macro-error2 = { version = "2.0.1", default-features = false }

[lib]
name = "maud_macros"
proc-macro = true
