[package]
name = "maud_macros_impl"
# When releasing a new version, please update html_root_url in src/lib.rs
version = "0.26.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/maud_macros/"
homepage = "https://maud.lambda.xyz/"
repository = "https://github.com/lambda-fairy/maud"
description = "Compile-time HTML templates."
edition = "2021"

[features]
hotreload = ["leon"]

[dependencies]
syn = "1.0.8"
quote = "1.0.7"
proc-macro2 = "1.0.23"
proc-macro-error2 = "2.0.1"
leon = { version = "2.0.1", optional = true }

[lib]
name = "maud_macros_impl"
